--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,7 @@
 PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
-POSTGRES_DB=cp_itr
+POSTGRES_DB=cp-itr1
 POSTGRES_PASSWORD=r5d3t22
 POSTGRES_PORT=5432
 GOOGLE_CLIENT_ID=845439658659-unvuvrvv6vcoruij9nl3ia6ks6b6pu01.apps.googleusercontent.com
