--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
@@ -33,6 +34,7 @@
     "dotenv": "^10.0.0",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -50,6 +52,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-google-oauth20": "^2.0.10",
+    "@types/passport-jwt": "^3.0.6",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
