--- a/.production.env
+++ b/.production.env
@@ -4,3 +4,6 @@ POSTGRES_USER=postgres
 POSTGRES_DB=cp_itr
 POSTGRES_PASSWORD=r5d3t22
 POSTGRES_PORT=5432
+GOOGLE_CLIENT_ID=845439658659-unvuvrvv6vcoruij9nl3ia6ks6b6pu01.apps.googleusercontent.com
+GOOGLE_SECRET=IJeAVcYDy1yMHy8Rdtli8MPL
+GOOGLE_REDIRECT_URI=http://localhost:5000/auth/google/redirect
