--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
+    "@types/multer": "^1.4.7",
     "class-transformer": "^0.4.0",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "multer-google-storage": "^1.3.0",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
@@ -42,7 +44,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
