--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 5000:5000
       - 9229:9229
-    command: npm run start:dev
+    command: npm run start
     depends_on:
       - postgres
     restart: always
@@ -21,7 +21,7 @@ services:
     container_name: postgres
     image: postgres:13
     env_file:
-      - .development.env
+      - .production.env
     environment:
       PG_DATA: /var/lib/postgresql/data
     ports:
