--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@nestjs/swagger": "^5.0.9",
     "@types/multer": "^1.4.7",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "multer-google-storage": "^1.3.0",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-vkontakte": "^0.5.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -54,8 +57,10 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth20": "^2.0.10",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-vkontakte": "^1.3.1",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
